// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snackbar renders Snackbar 1`] = `
<div
  className="Snackbar default"
  role="alert"
>
  <div
    className="Content"
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    Snacksssss
  </div>
  <a
    className="Dismiss"
    href="javascript:void(0);"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    role="button"
  >
    <Close
      className="DismissIcon"
      size={21}
    />
  </a>
</div>
`;

exports[`Snackbar renders Snackbar with different props 1`] = `
<div
  className="Snackbar danger"
  role="alert"
>
  <div
    className="Content"
    style={
      Object {
        "maxWidth": 100,
      }
    }
  >
    Snacksssss
  </div>
  <a
    className="Dismiss"
    href="javascript:void(0);"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    role="button"
  >
    <Close
      className="DismissIcon"
      size={21}
    />
  </a>
</div>
`;
